# healthy-diet

./: .env.example  .gitignore  CLAUDE.md  drizzle.config.ts  eslint.config.ts  healthy-diet.code-workspace  next.config.ts  package.json
healthy-diet-api/: .dockerignore  .gitignore  AGENT.md  Cargo.toml  Dockerfile  compose.yaml  docker-compose.yml  eslint.config.ts  nitro.config.ts  openapi.yml  package.json  readme.md
healthy-diet-api-server/: .dockerignore  Cargo.toml  Dockerfile.dev  docker-compose.yml
healthy-diet-api-server/src/: lib.rs  main.rs  router.rs
healthy-diet-api/.sqlx/: query-0409b855e3fb6d105f49244826629104251cb91e8025345914bb107a4e694ac9.json  query-0dde9aeda480f7ef7c29487d856f9638a03dc7d641a7c108420503a1d173f3e0.json  query-297dc8bd8fee514062697db7dee7cad343dec9b764ad79e7a80b55f341e92bfd.json  query-2d0cff9b081ca493eb9d8bdae483306cc793302305686f77f11202e882919687.json  query-2e008004fbc0b147cfed8b713bb915a15e0734823f96ab40b15b0052a2e4f24f.json  query-3d5c4a358c6ae8d5789c0bf5be23776d8f5377340a3dec63a56e2c320ea26b20.json  query-45ca75c3b6295f6c44e9d191ca91e48a227dff5e8b83e96f7e6858cedc92b97a.json  query-48a1b592c416205c7f32cf99a502254d9b3cd7974976d183c82837e7d297e039.json  query-4efff257bc565faf4b8eb05d05ae239a073266c62290d963938ff02e72f2974e.json  query-4fbcb588d16154a07600c946950eee9a94b6963297cf56ffbf9fbbdb053612bf.json  query-58432502d3ad02b1498952b19aa2ec7a5a0497160dff5c38fcdeb543feac7f22.json  query-58ba1a5b4bdeb359bc1f244b9bbda85942ce0bc059660de0c8f3e4c97fa43829.json  query-5c0f0398bc71f7ad3847477a5fbd7af5fb25d8711d67ed55a34a89b6f7d2e849.json  query-60b6a69be47c612b27e0f7f12e50e8bfec53aa7d3eb1f53ec81a1382d8cbc065.json  query-6ca0ecbccfd104126e6ec6a5cf29ff2a3751f1c37e35c5831cc670dc0243b2a5.json  query-6ef85d2ef43839479218c03b3d049c78f8cbd639e7b4911aa0618d5359f5802f.json  query-82fa9df857c3e9ac512ee8c0c893f46c182e16e673309726181b47ab769a0d68.json  query-840496337591d60e6738ff38609017ac45fba68cb228b4feca97e27a9623ee09.json  query-8862b5e5ff777a5f9d2fb7e253e90efeb7ee244dcc2f325bd967201306dc543f.json  query-95a8d88be9cef2fa93b749dd0bda52aa4bcf3a07905136a94888447e078fec0c.json  (+16 more)
healthy-diet-api/src/: lib.rs  main.rs  (+2 more)
(+165 files in other folders)
