[package]
name = "healthy-diet-api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = "0.4"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] } 
scraper = "0.24"
rquest = "5.1.0"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1"
serde_urlencoded = "0.7"